--- a/GestionPedidos/GestionPedidos.csproj
+++ b/GestionPedidos/GestionPedidos.csproj
@@ -175,15 +175,19 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Bonified.cs" />
+    <Compile Include="Models\BranchOffice.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Organitation.cs" />
     <Compile Include="Models\PriceListDetail.cs" />
     <Compile Include="Models\PriceListMaster.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProcessStatus.cs" />
+    <Compile Include="Models\SalesMan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
