Creacion maestro detalle

--- a/GestionPedidos/GestionPedidos.csproj
+++ b/GestionPedidos/GestionPedidos.csproj
@@ -168,25 +168,47 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BonifiedsController.cs" />
+    <Compile Include="Controllers\BranchOfficesController.cs" />
+    <Compile Include="Controllers\CategoriesController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
+    <Compile Include="Controllers\CustomerTypesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OrderDetailsController.cs" />
+    <Compile Include="Controllers\OrdersController.cs" />
+    <Compile Include="Controllers\PriceListDetailsController.cs" />
+    <Compile Include="Controllers\PriceListMastersController.cs" />
+    <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Controllers\SalesChannelsController.cs" />
+    <Compile Include="Controllers\SalesMenController.cs" />
+    <Compile Include="Controllers\SalesOrderController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Bonified.cs" />
     <Compile Include="Models\BranchOffice.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\CustomerOrder.cs" />
+    <Compile Include="Models\CustomerType.cs" />
+    <Compile Include="Models\GestionPedidosContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderDetail.cs" />
+    <Compile Include="Models\OrderStatus.cs" />
+    <Compile Include="Models\OrderView.cs" />
     <Compile Include="Models\Organitation.cs" />
     <Compile Include="Models\PriceListDetail.cs" />
     <Compile Include="Models\PriceListMaster.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProcessStatus.cs" />
+    <Compile Include="Models\ProductOrder.cs" />
+    <Compile Include="Models\ProductPriceList.cs" />
+    <Compile Include="Models\SalesChannel.cs" />
     <Compile Include="Models\SalesMan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -246,6 +268,68 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\BranchOffices\Create.cshtml" />
+    <Content Include="Views\BranchOffices\Delete.cshtml" />
+    <Content Include="Views\BranchOffices\Details.cshtml" />
+    <Content Include="Views\BranchOffices\Edit.cshtml" />
+    <Content Include="Views\BranchOffices\Index.cshtml" />
+    <Content Include="Views\Bonifieds\Create.cshtml" />
+    <Content Include="Views\Bonifieds\Delete.cshtml" />
+    <Content Include="Views\Bonifieds\Details.cshtml" />
+    <Content Include="Views\Bonifieds\Edit.cshtml" />
+    <Content Include="Views\Bonifieds\Index.cshtml" />
+    <Content Include="Views\Categories\Create.cshtml" />
+    <Content Include="Views\Categories\Delete.cshtml" />
+    <Content Include="Views\Categories\Details.cshtml" />
+    <Content Include="Views\Categories\Edit.cshtml" />
+    <Content Include="Views\Categories\Index.cshtml" />
+    <Content Include="Views\SalesMen\Create.cshtml" />
+    <Content Include="Views\SalesMen\Delete.cshtml" />
+    <Content Include="Views\SalesMen\Details.cshtml" />
+    <Content Include="Views\SalesMen\Edit.cshtml" />
+    <Content Include="Views\SalesMen\Index.cshtml" />
+    <Content Include="Views\Products\Create.cshtml" />
+    <Content Include="Views\Products\Delete.cshtml" />
+    <Content Include="Views\Products\Details.cshtml" />
+    <Content Include="Views\Products\Edit.cshtml" />
+    <Content Include="Views\Products\Index.cshtml" />
+    <Content Include="Views\PriceListMasters\Create.cshtml" />
+    <Content Include="Views\PriceListMasters\Delete.cshtml" />
+    <Content Include="Views\PriceListMasters\Details.cshtml" />
+    <Content Include="Views\PriceListMasters\Edit.cshtml" />
+    <Content Include="Views\PriceListMasters\Index.cshtml" />
+    <Content Include="Views\PriceListDetails\Create.cshtml" />
+    <Content Include="Views\PriceListDetails\Delete.cshtml" />
+    <Content Include="Views\PriceListDetails\Details.cshtml" />
+    <Content Include="Views\PriceListDetails\Edit.cshtml" />
+    <Content Include="Views\PriceListDetails\Index.cshtml" />
+    <Content Include="Views\Orders\Create.cshtml" />
+    <Content Include="Views\Orders\Delete.cshtml" />
+    <Content Include="Views\Orders\Details.cshtml" />
+    <Content Include="Views\Orders\Edit.cshtml" />
+    <Content Include="Views\Orders\Index.cshtml" />
+    <Content Include="Views\OrderDetails\Create.cshtml" />
+    <Content Include="Views\OrderDetails\Delete.cshtml" />
+    <Content Include="Views\OrderDetails\Details.cshtml" />
+    <Content Include="Views\OrderDetails\Edit.cshtml" />
+    <Content Include="Views\OrderDetails\Index.cshtml" />
+    <Content Include="Views\SalesChannels\Create.cshtml" />
+    <Content Include="Views\SalesChannels\Delete.cshtml" />
+    <Content Include="Views\SalesChannels\Details.cshtml" />
+    <Content Include="Views\SalesChannels\Edit.cshtml" />
+    <Content Include="Views\SalesChannels\Index.cshtml" />
+    <Content Include="Views\Customers\Create.cshtml" />
+    <Content Include="Views\Customers\Delete.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\Edit.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\CustomerTypes\Create.cshtml" />
+    <Content Include="Views\CustomerTypes\Delete.cshtml" />
+    <Content Include="Views\CustomerTypes\Details.cshtml" />
+    <Content Include="Views\CustomerTypes\Edit.cshtml" />
+    <Content Include="Views\CustomerTypes\Index.cshtml" />
+    <Content Include="Views\SalesOrder\NewOrder.cshtml" />
+    <Content Include="Views\SalesOrder\AddProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
