--- a/GestionPedidos/Web.config
+++ b/GestionPedidos/Web.config
@@ -11,9 +11,10 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GestionPedidos-20171014070219.mdf;Initial Catalog=aspnet-GestionPedidos-20171014070219;Integrated Security=True"
+      <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GestionPedidos;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="OrderContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GestionPedidos;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="GestionPedidosContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GestionPedidos;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
